# pkg/guacrest/generated/server.go
@@ -300,11 +300,9 @@ type BadRequestJSONResponse Error
 
 type InternalServerErrorJSONResponse Error
 
-type PurlListJSONResponse struct {
-	// PaginationInfo Contains the cursor to retrieve more pages. If there are no more,  NextCursor will be nil.
-	PaginationInfo PaginationInfo `json:"PaginationInfo"`
-	PurlList       []Purl         `json:"PurlList"`
-}
+type PackageNameListJSONResponse []PackageName
+
+type PurlListJSONResponse []Purl
 
 type AnalyzeDependenciesRequestObject struct {
 	Params AnalyzeDependenciesParams
@@ -314,7 +312,7 @@ type AnalyzeDependenciesResponseObject interface {
 	VisitAnalyzeDependenciesResponse(w http.ResponseWriter) error
 }
 
-type AnalyzeDependencies200JSONResponse struct{ PurlListJSONResponse }
+type AnalyzeDependencies200JSONResponse struct{ PackageNameListJSONResponse }
 
 func (response AnalyzeDependencies200JSONResponse) VisitAnalyzeDependenciesResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
